--- a/index.html
+++ b/index.html
@@ -1,11 +1,11 @@
+<!DOCTYPE html>
 <html>
-<head>
-</head>
-<body>
-<h1>Hello world</h1>
-<h1>Goodbye world</h1>
-
-</body>
-
-
+  <head>
+    <title>A whale of a greeting</title>
+  </head>
+  <body>
+    <h1>hello, world</h1>
+    <p>Call me Ishmael.</p>
+    <img src="images/breaching_whale.jpg">
+  </body>
 </html>
